# flatseek

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish.yml  test.yml
docs/: aggregation.md  api.md  architecture.md  benchmark.md  cli.md  index.md  indexing.md  internals.md  query-language.md  quickstart.md  schemas.md
src/flatseek/: __init__.py  api_server.py  cli.py  client.py
src/flatseek/api/: __init__.py  deps.py  main.py  schemas.py
src/flatseek/api/routes/: aggregate.py  index.py  search.py
src/flatseek/core/: builder.py  chat.py  classify.py  query_engine.py  query_parser.py  scanner.py
src/flatseek/test/: fixtures.py  test_api.py  test_cli.py  test_search.py
